[project]
name = "chainlit-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Aiman Shahid", email = "aimanshahid800@gmai.com" }
]
requires-python = ">=3.13"
dependencies = [
    "chainlit>=2.5.5",
    "openai-agents>=0.0.14",
]

[project.scripts]
chainlit-agent = "chainlit_agent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
